Fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -158,11 +158,13 @@ body {
   border: 1px solid #000;
   padding: 0.5rem;
   cursor: pointer;
+  margin-left: 1rem;
 }
 
 .currency-logo {
   width: 20px;
   height: 20px;
+  object-fit: cover;
 }
 
 .vote-button {
